[package]
name = "avl_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
# This dependencies are only required for testing and are not used in the actual implementation
itertools = "0.12.0"
rand = "0.8.5"