[package]
name = "avl_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphviz-rust = "0.7.0"
clap = { version = "4.4.16", features = ["derive"] }

[dev-dependencies]
# This dependencies are only required for testing and are not used in the actual implementation
itertools = "0.12.0"
rand = "0.8.5"